--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf8" />
     <title>Form Demo</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=_turnstileCb" defer></script>
   </head>
   <body>
     <form method="POST" action="/api/submit">
@@ -54,8 +55,20 @@
           </li>
         </ul>
       </div>
-
+      <div id="turnstile-widget" style="padding-top: 20px;"></div>
       <button type="submit">Submit</button>
     </form>
+    <script>
+	// This function is called when the Turnstile script is loaded and ready to be used.
+	// The function name matches the "onload=..." parameter.
+	function _turnstileCb() {
+	    console.debug('_turnstileCb called');
+
+	    turnstile.render('#turnstile-widget', {
+	      sitekey: '0x4AAAAAAAxC7JTXIS2zZDkW',
+	      theme: 'light',
+	    });
+	}
+	</script>
   </body>
 </html>
